@@ -3,6 +3,7 @@ package com.delgo.reward.mongoService;
 import com.delgo.reward.cache.MungpleCache;
 import com.delgo.reward.cacheService.MungpleCacheService;
 import com.delgo.reward.comm.code.CategoryCode;
+import com.delgo.reward.comm.code.MungpleSort;
 import com.delgo.reward.comm.ncp.GeoService;
 import com.delgo.reward.comm.ncp.storage.BucketName;
 import com.delgo.reward.comm.ncp.storage.ObjectStorageService;
@@ -16,6 +17,10 @@ import com.delgo.reward.mongoDomain.mungple.MongoMungple;
 import com.delgo.reward.mongoDomain.mungple.MungpleDetail;
 import com.delgo.reward.mongoRepository.MongoMungpleRepository;
 import com.delgo.reward.mongoRepository.MungpleDetailRepository;
+import com.delgo.reward.service.strategy.BookmarkCountSorting;
+import com.delgo.reward.service.strategy.CertCountSorting;
+import com.delgo.reward.service.strategy.DistanceSorting;
+import com.delgo.reward.service.strategy.MungpleSortingStrategy;
 import com.delgo.reward.record.mungple.MungpleDetailRecord;
 import com.delgo.reward.repository.CertRepository;
 import com.delgo.reward.service.BookmarkService;
@@ -49,13 +54,18 @@ public class MongoMungpleService {
 
     // Service
     private final GeoService geoService;
-    private final ObjectStorageService objectStorageService;
     private final BookmarkService bookmarkService;
+    private final ObjectStorageService objectStorageService;
 
     // Repository
     private final CertRepository certRepository;
     private final MongoMungpleRepository mongoMungpleRepository;
     private final MungpleDetailRepository mungpleDetailRepository;
+
+    // strategy
+    private final CertCountSorting certCountSorting;
+    private final BookmarkCountSorting bookmarkCountSorting;
+
 
     /**
      * Mungple 생성
@@ -63,6 +73,14 @@ public class MongoMungpleService {
 
     public MongoMungple save(MongoMungple mongoMungple) {
         return mongoMungpleRepository.save(mongoMungple);
+    }
+
+    /**
+     * Active Mungple 전체 조회
+     */
+    @Cacheable(cacheNames = MUNGPLE_CACHE_STORE)
+    public List<MungpleResDTO> getAllActiveMungple() {
+        return mongoMungpleRepository.findByIsActive(true).stream().map(MungpleResDTO::new).toList();
     }
 
     /**
@@ -93,27 +111,61 @@ public class MongoMungpleService {
     }
 
     /**
-     * [categoryCode] Active Mungple 조회
+     * [categoryCode] Active Mungple 조회 [TODO: Deprecated]
      */
     public List<MungpleResDTO> getActiveMungpleByCategoryCode(CategoryCode categoryCode) {
         List<MongoMungple> mungpleList = !categoryCode.equals(CategoryCode.CA0000)
                 ? mongoMungpleRepository.findByCategoryCodeAndIsActive(categoryCode, true)
                 : mongoMungpleRepository.findByIsActive(true);
 
-        return mungpleList.stream().map(MungpleResDTO::new).collect(Collectors.toList());
+        return mungpleList.stream().map(m ->{
+            int certCount = certRepository.countOfCorrectCertByMungple(m.getMungpleId());
+            int bookmarkCount = bookmarkService.getActiveBookmarkCount(m.getMungpleId());
+
+            return new MungpleResDTO(m, certCount, bookmarkCount);
+        }).toList();
+    }
+
+    /**
+     * [categoryCode] Active Mungple 조회
+     */
+    public List<MungpleResDTO> getActiveMungpleByCategoryCode(CategoryCode categoryCode, MungpleSort sort, String latitude, String longitude) {
+        List<MongoMungple> mungpleList = !categoryCode.equals(CategoryCode.CA0000)
+                ? mongoMungpleRepository.findByCategoryCodeAndIsActive(categoryCode, true)
+                : mongoMungpleRepository.findByIsActive(true);
+
+        // 조건에 맞게 정렬
+        MungpleSortingStrategy sortingStrategy = switch (sort) {
+            case DISTANCE -> new DistanceSorting(latitude, longitude);
+            case BOOKMARK -> bookmarkCountSorting;
+            case CERT -> certCountSorting;
+        };
+
+        // DTO로 변환
+        return sortingStrategy.sort(mungpleList).stream().map(m -> {
+            int certCount = certRepository.countOfCorrectCertByMungple(m.getMungpleId());
+            int bookmarkCount = bookmarkService.getActiveBookmarkCount(m.getMungpleId());
+
+            return new MungpleResDTO(m, certCount, bookmarkCount);
+        }).toList();
     }
 
     /**
      * [BookMark] Active Mungple 조회
      */
-    public List<MungpleResDTO> getActiveMungpleByBookMark(int userId) {
-        List<Bookmark> bookmarks = bookmarkService.getBookmarkByUserId(userId);
+    public List<MungpleResDTO> getActiveMungpleByBookMark(int userId, MungpleSort sort, String latitude, String longitude) {
+        List<Bookmark> bookmarks = bookmarkService.getActiveBookmarkByUserId(userId);
         List<Integer> mungpleIdList = bookmarks.stream().map(Bookmark::getMungpleId).toList();
         List<MongoMungple> mungpleList = mongoMungpleRepository.findByMungpleIdIn(mungpleIdList);
 
-        return mungpleList.stream().map(MungpleResDTO::new).collect(Collectors.toList());
-    }
+        MungpleSortingStrategy sortingStrategy = switch (sort) {
+            case DISTANCE -> new DistanceSorting(latitude, longitude);
+            case BOOKMARK -> bookmarkCountSorting;
+            case CERT -> certCountSorting;
+        };
 
+        return sortingStrategy.sort(mungpleList).stream().map(MungpleResDTO::new).collect(Collectors.toList());
+    }
 
     /**
      * [address] Mungple 중복 체크
@@ -168,7 +220,7 @@ public class MongoMungpleService {
 
     public MungpleDetailResDTO getMungpleDetailByMungpleIdAndUserId(int mungpleId, int userId) {
         MongoMungple mongoMungple = getMungpleByMungpleId(mungpleId);
-        int certCount = certRepository.countOfCertByMungple(mungpleId);
+        int certCount = certRepository.countOfCorrectCertByMungple(mungpleId);
 
         boolean isBookmarked = (userId != 0 && bookmarkService.hasBookmarkByIsBookmarked(userId, mungpleId, true));
         int bookmarkCount = bookmarkService.getActiveBookmarkCount(mungpleId);
@@ -181,6 +233,15 @@ public class MongoMungpleService {
                 return new MungpleDetailByPriceTagResDTO(mongoMungple, certCount, bookmarkCount, isBookmarked);
             }
         }
+    }
+
+    public void resetMungpleCache(){
+        // Cache 전부 삭제
+        mungpleCacheService.deleteAllCacheData();
+        // Active Mongo Mungple 조회
+        List<MongoMungple> mungpleList = mongoMungpleRepository.findByIsActive(true);
+        // Cache 설정
+        mungpleList.forEach(m -> mungpleCacheService.updateCacheData(m.getMungpleId(), m));
     }
 }
 
